--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,11 @@ header .menu-perfil a:hover {
     text-decoration: none;
 }
 
+#control-video {
+    display: none;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
 /* Botões Assistir e Mais informações */
 .play {
     background-color: white;
